fix overflow w komentarzach

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -268,3 +268,7 @@ a:hover{
     float: right;
 }
 
+.comments .panel .panel-body{
+    overflow-wrap: break-word;
+    
+}
